@@ -1,3 +1,12 @@
+** v3.33, 13.08.2018**
+* Update EFL.
+* Reskinned the ScrappingMachine.
+* Reskinned GarrisonUI.
+* Updated Azerite Skin.
+* Change the FrameStrata for the ObjectiveTracker.
+* Added an option to enable/disable the skin for the BossButton.
+* Added custom emojis :salt: :monkaomega:
+
 ** v3.32, 13.08.2018**
 * Added a scale option for the MicroBar.
 * Added a show/hide option for the friends/guild text on the MicroBar.
